--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Emiliano Bruni
 copyright_year   = 2021
 
-version = 0.05
+version = 0.06
 
 [PodWeaver]
 [@Starter::Git]
@@ -28,5 +28,6 @@ plugin = ReadmeInRoot
 
 [Prereqs]
 Mojolicious = 9.00
+Term::Shell = 0.12
 
 [Prereqs / TestRequires]
